--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,209 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.h1 {
+  background-color: rgb(10 10 10 / 92%);
+
+}
+
+.swapping {
+  text-align: center;
+  padding-top: 20px;
+  font-size: 60px;
+  font-family: cursive;
+  color: rgb(71, 153, 190);
+  background-color: rgb(10 10 10 / 92%);
+  margin: 0px;
+}
+
+.header {
+  background-color: rgb(10 10 10 / 92%);
+  overflow: hidden;
+}
+
+.header a {
+  display: grid;
+  float: left;
+  color: rgb(71, 153, 190);
+  font-family: cursive;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 25px;
+}
+
+.header a:hover {
+  background-color: rgb(10 10 10 / 92%);
+  color: rgb(248, 248, 248);
+}
+
+.header a.active {
+  background-color: #d43565;
+  color: white;
+}
+
+.Container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: space-around;
+  margin: 12px 20px 20px 0px;
+}
+
+.cnt-btn {
+  border-radius: 16px;
+  width: 162px;
+  height: 41px;
+  font-family: cursive;
+  background-color: rgb(71, 153, 190);
+  font-size: 22px;
+}
+
+.cs-btn {
+  border-radius: 16px;
+  width: 162px;
+  height: 41px;
+  font-family: cursive;
+  background-color: transparent;
+  font-size: 22px;
+}
+
+.cmplt-btn {
+  border-radius: 16px;
+  width: 166px;
+  height: 66px;
+  font-family: cursive;
+  background-color: transparent;
+  font-size: 22px;
+  margin-top: 21%;
+}
+
+.rjct-btn {
+  border-radius: 16px;
+  width: 100px;
+  height: 41px;
+  font-family: cursive;
+  background-color: transparent;
+  font-size: 22px;
+  margin-left: 18%;
+  margin-top: 20%;
+}
+.ccb-btn {
+  border-radius: 16px;
+  width: 166px;
+  height: 66px;
+  font-family: cursive;
+  background-color: transparent;
+  font-size: 22px;
+  margin-top: 21%;
+}
+.choose-btn{
+  border-radius: 16px;
+  margin-left: 29%;
+  width: 114px;
+  height: 38px;
+  font-family: cursive;
+  background-color: rgb(71, 153, 190);
+  font-size: 22px;
+}
+.text {
+  text-decoration: none;
+}
+
+.card-ss {
+  width: 18rem;
+}
+
+.nft-img {
+  height: 200px;
+}
+
+.blank-image-box {
+  width: 200px;
+  height: 200px;
+  background-color: #979393;
+}
+
+.waiting-text {
+  font-size: 16px;
+  color: #0a0909;
+  text-align: center;
+  margin-top: 80px;
+  /* Adjust the margin-top value to position the text vertically */
+}
+
+.filter-buttons {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.filter-buttons button {
+  background-color: rgb(71, 153, 190);
+  border-radius: 16px;
+  padding: 13px 31px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.filter-buttons button:hover {
+  background-color: #e0e0e0;
+}
+
+.nft-show{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+.nft-show .nft-item{
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+.swap-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  margin-right: 28px;
+  margin-left: 26px;
+  margin-top: 10px;
+}
+.swap-list .swap-item {
+  border: 3px solid #489999;
+  padding: 5px;
+  background-color: transparent;
+}
+.swap-item-nft{
+  border: 1px solid #ccc;
+  padding: 20px;
+}
+.swap-list .swap-item .card-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.swap-list .swap-item .nft-img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 10px;
+}
+
+.swap-list .swap-item .blank-image-box {
+  width: 100%;
+  height: 200px;
+  background-color: #f0f0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swap-list .swap-item .waiting-text {
+  font-size: 14px;
+  color: #888;
+}
+
+
+.swap-icon {
+  font-size: 54px;
+  margin: 58px 10px; /* Adjust the margin as needed */
+}
